--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,4 +1,7 @@
 <section id="home">
-    <fullstack-logo></fullstack-logo>
-    <rando-greeting></rando-greeting>
+  <p>ON HOME PAGE</p>
+  <input type="text" class="form-control" ng-model="url" placeholder="enter url here">
+  <button ng-click="makeTree()">Create Radial Tree</button>
+  <pre>{{url}}</pre>
+  <button ng-click="drawTree()">Draw the existing tree</button>
 </section>
